--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<h1>hello world!</h1>
+<form [formGroup]="signup" (ngSubmit)="submit()">
+  <div class="form-group">
+    <label>Email address</label>
+    <input type="email" formControlName="email" />
+  </div>
+
+  <app-file-upload
+    formControlName="image"
+    [progress]="progress"
+  ></app-file-upload>
+
+  <button>Submit</button>
+</form>
