--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -1,7 +1,8 @@
-<div>
-  <span>Choose file</span>
-  <span>{{ file ? file.name : 'or drag and drop file here' }}</span>
+<div class="file-drop-area">
+  <span class="fake-btn">Choose file</span>
+  <span class="file-msg">{{
+    file ? file.name : 'or drag and drop file here'
+  }}</span>
   <input class="file-input" type="file" />
 </div>
-
 <app-progress [progress]="progress"></app-progress>
