--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #37385f;
+  color: #d7d7ef;
+  font-family: 'Lato', sans-serif;
+}
