--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,35 @@
-<form [formGroup]="signup" (ngSubmit)="submit()">
-  <div class="form-group">
-    <label>Email address</label>
-    <input
-      type="email"
-      class="form-control"
-      formControlName="email"
-      placeholder="Email"
-    />
-    <div class="invalid-feedback" style="display: block;">
-      <ng-container *ngIf="hasError('email', 'required')"
-        >This field is required</ng-container
-      >
+<div class="container">
+  <form [formGroup]="signup" (ngSubmit)="submit()">
+    <div class="form-group">
+      <label>Email address</label>
+      <input
+        type="email"
+        class="form-control"
+        formControlName="email"
+        placeholder="Email"
+      />
+      <div class="invalid-feedback" style="display: block;">
+        <ng-container *ngIf="hasError('email', 'required')"
+          >This field is required</ng-container
+        >
+      </div>
     </div>
-  </div>
 
-  <app-file-upload
-    formControlName="image"
-    [progress]="progress"
-  ></app-file-upload>
+    <div class="form-group">
+      <app-file-upload
+        formControlName="image"
+        [progress]="progress"
+      ></app-file-upload>
+      <div class="invalid-feedback" style="display: block;">
+        <ng-container *ngIf="hasError('image', 'required')"
+          >This field is required</ng-container
+        >
+        <ng-container *ngIf="hasError('image', 'requiredFileType')"
+          >Only PNG 🤡</ng-container
+        >
+      </div>
+    </div>
 
-  <button>Submit</button>
-</form>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
